// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KIOSK-007: ServicesScreen file longue + service fermé > KIOSK-007: service CLOSED → carte grisée avec horaire, non cliquable (snapshot 'en') 1`] = `
<main
  role="main"
  style="background-color: var(--surface-kiosk); min-height: 100vh; display: flex; flex-direction: column; padding: var(--space-8); gap: var(--space-6);"
>
  <header
    style="display: flex; align-items: center; gap: var(--space-4);"
  >
    <button
      data-testid="back-btn"
      style="font-size: 20px; color: var(--ink-inverse); background: none; cursor: pointer; padding: var(--space-2); min-width: 72px; min-height: 72px;"
    >
      ← 
      Back
    </button>
    <span
      style="font-size: 28px; color: var(--ink-muted-inv); margin-left: auto;"
    >
      FR
    </span>
  </header>
  <h1
    style="font-family: var(--font-display); font-size: var(--text-2xl); font-weight: 700; letter-spacing: var(--tracking-tight); color: var(--ink-inverse); text-align: center; margin: 0px;"
  >
    Which service do you need?
  </h1>
  <div
    style="display: flex; flex-direction: column; gap: var(--space-4); flex: 1 1 0%;"
  >
    <button
      aria-disabled="true"
      data-testid="service-card"
      style="min-height: 96px; background-color: var(--surface-1); border-radius: var(--r-lg); border: 1px solid var(--hairline); box-shadow: var(--shadow-1); cursor: not-allowed; display: flex; align-items: center; padding: var(--space-4) var(--space-6); gap: var(--space-6); opacity: 0.4; text-align: left;"
    >
      <span
        data-testid="service-icon"
        style="font-size: 40px; line-height: 1;"
      >
        💸
      </span>
      <div
        style="display: flex; flex-direction: column; gap: var(--space-1); flex: 1 1 0%;"
      >
        <span
          data-testid="service-label"
          style="font-size: 28px; font-weight: 600; color: var(--action-label);"
        >
          Virement international
        </span>
        <span
          data-testid="service-schedule"
          style="font-size: 20px; color: var(--ink-soft);"
        >
          Closed — lundi 08h00
        </span>
      </div>
    </button>
  </div>
  <button
    data-testid="accessibility-btn"
    style="font-size: 24px; color: var(--ink-muted-inv); background: none; cursor: pointer; padding: var(--space-2); min-height: 72px; align-self: center;"
  >
    ♿ Priority access
  </button>
</main>
`;

exports[`KIOSK-007: ServicesScreen file longue + service fermé > KIOSK-007: service CLOSED → carte grisée avec horaire, non cliquable (snapshot 'fr') 1`] = `
<main
  role="main"
  style="background-color: var(--surface-kiosk); min-height: 100vh; display: flex; flex-direction: column; padding: var(--space-8); gap: var(--space-6);"
>
  <header
    style="display: flex; align-items: center; gap: var(--space-4);"
  >
    <button
      data-testid="back-btn"
      style="font-size: 20px; color: var(--ink-inverse); background: none; cursor: pointer; padding: var(--space-2); min-width: 72px; min-height: 72px;"
    >
      ← 
      Retour
    </button>
    <span
      style="font-size: 28px; color: var(--ink-muted-inv); margin-left: auto;"
    >
      FR
    </span>
  </header>
  <h1
    style="font-family: var(--font-display); font-size: var(--text-2xl); font-weight: 700; letter-spacing: var(--tracking-tight); color: var(--ink-inverse); text-align: center; margin: 0px;"
  >
    Quel service souhaitez-vous ?
  </h1>
  <div
    style="display: flex; flex-direction: column; gap: var(--space-4); flex: 1 1 0%;"
  >
    <button
      aria-disabled="true"
      data-testid="service-card"
      style="min-height: 96px; background-color: var(--surface-1); border-radius: var(--r-lg); border: 1px solid var(--hairline); box-shadow: var(--shadow-1); cursor: not-allowed; display: flex; align-items: center; padding: var(--space-4) var(--space-6); gap: var(--space-6); opacity: 0.4; text-align: left;"
    >
      <span
        data-testid="service-icon"
        style="font-size: 40px; line-height: 1;"
      >
        💸
      </span>
      <div
        style="display: flex; flex-direction: column; gap: var(--space-1); flex: 1 1 0%;"
      >
        <span
          data-testid="service-label"
          style="font-size: 28px; font-weight: 600; color: var(--action-label);"
        >
          Virement international
        </span>
        <span
          data-testid="service-schedule"
          style="font-size: 20px; color: var(--ink-soft);"
        >
          Fermé — lundi 08h00
        </span>
      </div>
    </button>
  </div>
  <button
    data-testid="accessibility-btn"
    style="font-size: 24px; color: var(--ink-muted-inv); background: none; cursor: pointer; padding: var(--space-2); min-height: 72px; align-self: center;"
  >
    ♿ Accès prioritaire
  </button>
</main>
`;
